# mget-rs

./: Cargo.toml  README.md  mget
src/: cli.yml  lib.rs  main.rs
